--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
       <!--JS-->
-      <script src="../js/tienda.js"></script>
+      <script src="./js/tienda.js"></script>
       
 </body>
 </html>
