Arreglos de rutas

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </div>
         </section>
       </main>
+      
       <!--footer-->
       <footer>
         <section>
@@ -134,6 +135,7 @@
 
       <!--JS-->
       <script src="./js/tienda.js"></script>
+      <script src="./db/data.json"></script>
       
 </body>
 </html>
