Arreglos de rutas

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
       <!--JS-->
       <script src="./js/tienda.js"></script>
-      <script src="./db/data.json"></script>
+      <script src="./data.json"></script>
       
 </body>
 </html>
