Arreglos de rutas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Link CSS-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="bodyIndexRegistro">
+<body id="bodyLogin">
 
 <main class="mainIndexRegistro form-signin w-100 m-auto">
   <form class="loginFormulario">
