--- a/pages/registro.html
+++ b/pages/registro.html
@@ -26,7 +26,7 @@
     </style>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="bodyIndexRegistro">
+<body id="bodyRegistro">
 
 <main class="mainIndexRegistro form-signin w-100 m-auto">
 
