--- a/pages/registro.html
+++ b/pages/registro.html
@@ -76,6 +76,6 @@ https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.all.min.js
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <!--JS-->
 <script src="../js/loginRegistro.js"></script>
-<script src="../js/main.js"></script>
+<script src="../js/main2.js"></script>
 </body>
 </html>
