Arreglos de diseño

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -52,7 +52,7 @@
           
             <div class="div-instrument-tienda" >
                 <!--imagenes-->
-                <div id="card-instrument-tienda" class="card-instrument-tienda">
+                <div id="card-instrument-tienda">
                 </div>
             </div>
           </div>  
